[tool.poetry]
name = "wqw-app"
version = "0.1.0"
description = ""
authors = ["Erik G. Brandt <erik.brandt@shaarpec.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
arq = "^0.22"
pydantic = "^1.9.0"
redis = "^4.1.0"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
jupyterlab = "^3.2.6"
black = {version = "^21.12b0", allow-prereleases = true}
sh = "^1.14.2"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.10.1"
devtools = "^0.8.0"
watchgod = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
